--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>One Page with Mobile Device | Canvas</title>
+    <title>Daniela Matias</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="vendor/css/animate.css" />
@@ -46,9 +46,9 @@
     
                 <div class="header__text">
                     <h1>
-                        A new canvas.
+                        Daniela
                         <br>
-                        A new beginning.
+                        Matias
                     </h1>
                     <p>One Stop Solution Center for all Your Design & Branding
                         <br> 
